--- a/static/global.css
+++ b/static/global.css
@@ -20,3 +20,13 @@ code {
 		font-size: 16px;
 	}
 }
+
+.selectionButton {
+	display: inline-block;
+	padding: 1em 1em;
+	border-radius: 2px;
+	margin: 0.5em;
+	cursor: pointer;
+	border:none;
+	
+}
